unpackaged/main/default/objects/Room_Block_Survey_Response__c/Room_Block_Survey_Response__c.object-meta.xml
<CustomObject>
    <description>After we make the API call to Workato and send the list of member contacts to email.
Store each Member Contact in a Room Block Survey Response record.</description>
    <label>Room Block Survey Response</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Room Block Survey Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>