unpackaged/main/default/objects/Room_Block_Survey_Response__c/fields/Email_Addresses_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Addresses_Sent__c</fullName>
    <description>The email address(es) the survey has been sent to.</description>
    <inlineHelpText>The email address(es) the survey has been sent to.</inlineHelpText>
    <label>Email Addresses Sent</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>