unpackaged/main/default/objects/Room_Block_Survey_Response__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <description>Master/Detail to the Engagement,</description>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Room Block Survey Responses</relationshipLabel>
    <relationshipName>RoomBlockSurveyResponses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>