unpackaged/main/default/objects/Room_Block_Survey_Response__c/fields/Member_Email__c.field-meta.xml
<CustomField>
    <fullName>Member_Email__c</fullName>
    <description>Displays either the 20 Group Member Contact Email or the Proprietary Account Contact Email</description>
    <formula>IF(NOT(ISBLANK( X20_Group_Member_Contact__c )),
   X20_Group_Member_Contact__r.Member_Email__c,
    Proprietary_Account_Contact__r.Member_Email__c 
)</formula>
    <label>Member Email</label>
    <type>Text</type>
</CustomField>