unpackaged/main/default/objects/Room_Block_Survey_Response__c/fields/Planned_Departure__c.field-meta.xml
<CustomField>
    <fullName>Planned_Departure__c</fullName>
    <label>Planned Departure</label>
    <type>Date</type>
</CustomField>