unpackaged/main/default/objects/Room_Block_Survey_Response__c/fields/Proprietary_Account_Contact__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Account_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proprietary Account Contact</label>
    <referenceTo>Proprietary_Account_Contact__c</referenceTo>
    <relationshipLabel>Room Block Survey Responses</relationshipLabel>
    <relationshipName>Room_Block_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>