unpackaged/main/default/objects/Room_Block_Survey_Response__c/fields/Room_Count__c.field-meta.xml
<CustomField>
    <fullName>Room_Count__c</fullName>
    <label>Room Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>