unpackaged/main/default/objects/Room_Block_Survey_Response__c/fields/RoomSelection__c.field-meta.xml
<CustomField>
    <fullName>RoomSelection__c</fullName>
    <label>Room Selection</label>
    <type>TextArea</type>
</CustomField>