unpackaged/main/default/objects/Room_Block_Survey_Response__c/fields/Survey_Id__c.field-meta.xml
<CustomField>
    <fullName>Survey_Id__c</fullName>
    <externalId>true</externalId>
    <label>Survey Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>