unpackaged/main/default/objects/Room_Block_Survey_Response__c/fields/SurveyResponseDate__c.field-meta.xml
<CustomField>
    <fullName>SurveyResponseDate__c</fullName>
    <description>The day and time the contact responded to the selection.</description>
    <label>Survey Response Date</label>
    <type>DateTime</type>
</CustomField>