unpackaged/main/default/objects/Room_Block_Survey_Response__c/fields/SurveySentDate__c.field-meta.xml
<CustomField>
    <fullName>SurveySentDate__c</fullName>
    <description>Date/Time - The timestamp for the API call to Workato.</description>
    <inlineHelpText>Date/Time - The timestamp for the API call to Workato.</inlineHelpText>
    <label>Survey Sent Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>