unpackaged/main/default/objects/Room_Block_Survey_Response__c/fields/X20_Group_Member_Contact__c.field-meta.xml
<CustomField>
    <fullName>X20_Group_Member_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>20 Group Member Contact</label>
    <referenceTo>X20_Group_Member_Contact__c</referenceTo>
    <relationshipLabel>Room Block Survey Responses</relationshipLabel>
    <relationshipName>Room_Block_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>